zishao-v410-deploy-mysql-done-0529

--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/5.use-time-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/5.use-time-functions-in-queries-of-mysql-mode.md
@@ -82,4 +82,4 @@ obclient> SELECT @dt
 1 row in set
 ```
 
-For information about time types, see **SQL Syntax (MySQL Mode)**. 
+For information about time types, see the **SQL syntax (MySQL mode)** section. 
