--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/6.use-type-conversion-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/6.use-type-conversion-functions-in-queries-of-mysql-mode.md
@@ -10,7 +10,7 @@ Type conversion functions convert one data type to another. For example, they su
 
 ### Convert time strings to datetime data types
 
-In MySQL mode of OceanBase Database, you can directly copy time strings to records of the `DATE` type. OceanBase Database can automatically convert the strings to the DATE type. You can also use the `CONVERT()` or `CAST()` function to convert the time strings to the DATE type. Syntax:
+In MySQL mode of OceanBase Database, you can directly copy time strings to records of the `DATE` type. OceanBase Database can automatically convert the strings to the `DATE` type. You can also use the `CONVERT()` or `CAST()` function to convert the time strings to the `DATE` type. Syntax:
 
 ```sql
 obclient> SELECT CONVERT('2020-02-02 14:30:45', DATE)    t1
@@ -31,9 +31,10 @@ t6: 2020-02-02 14:30:45
 1 row in set
 ```
 
-> **Note**
->
-> You can use the `DATE_FORMAT` function to convert values of the DATE type to strings. 
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>You can use the <code>DATE_FORMAT</code> function to convert values of the DATE type to strings.</p>
+</main>
 
 ### Convert between numbers and strings
 
