--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/7.use-aggregate-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/7.use-aggregate-functions-in-queries-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # Use aggregate functions in queries
 
-This topic describes how to use aggregate functions in queries by using examples. 
+This topic describes how to use aggregate functions in queries and provides some examples. 
 
 ## Aggregate functions
 
@@ -10,7 +10,7 @@ Aggregate functions are usually used with the `GROUP BY` clause to group values 
 
 ## Examples
 
-Create a table named `toys_order_ny` and enter order data. 
+Create a table named `toys_order` and enter order data. 
 
 ```sql
 /**/
@@ -75,4 +75,4 @@ obclient> SELECT toy_id,order_id
 ERROR 1055 (42000): 'test.toys_order.order_id' is not in GROUP BY
 ```
 
-For more information about the aggregate functions supported by OceanBase Database, see **SQL Syntax (MySQL Mode)**. 
+For more information about the aggregate functions supported by OceanBase Database, see the **SQL syntax (MySQL mode)** section. 
