--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/8.use-null-related-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/8.use-null-related-functions-in-queries-of-mysql-mode.md
@@ -21,7 +21,7 @@ Records: 3  Duplicates: 0  Warnings: 0
 
 ### Use NULL-related functions in queries
 
-Use the `NVL()` or `IFNULL()` function to define and replace `NULL` values In MySQL mode of OceanBase Database, if a column may contain `NULL` values, you can use the `NVL()` or `IFNULL()` function to identify NULL values and replace the NULL values with strings. 
+Use the `NVL()` or `IFNULL()` function to define and replace `NULL` values. In MySQL mode of OceanBase Database, if a column may contain `NULL` values, you can use the `NVL()` or `IFNULL()` function to identify NULL values and replace the NULL values with strings. 
 
 ```sql
 obclient> SELECT id, name, NVL(name, 'NOT APPLICABLE') n_name, IFNULL(name, 'NOT APPLICABLE') n2_name FROM t_null;
