--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/3.release-a-savepoint-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/3.release-a-savepoint-of-mysql-mode.md
@@ -14,9 +14,10 @@ Execute the following statement to release a savepoint:
 RELEASE SAVEPOINT pointname;
 ```
 
-> **Notice**
->
-> After the `RELEASE SAVEPOINT` statement is executed, you cannot roll back the transaction to the released savepoint, or any other savepoints between this statement and this savepoint. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>After the <code>RELEASE SAVEPOINT</code> statement is executed, you cannot roll back the transaction to the released savepoint, or any other savepoints between this statement and this savepoint.</p>
+  </main>
 
 In the following example, after the `ru` savepoint is released, you cannot roll back the transaction to the `ru` savepoint or any other savepoints between the `RELEASE SAVEPOINT` statement and the `ru` savepoint. 
 
