--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/1.connection-lost-with-error-code-2013-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/1.connection-lost-with-error-code-2013-of-mysql-mode.md
@@ -27,7 +27,7 @@ Take the following steps to view and modify the values of session-related variab
    ```sql
    obclient [test]> SHOW VARIABLES LIKE '%time%';
    +---------------------------------+------------------+
-   | Parameter                   | Value            |
+   | Parameter                       | Value            |
    +---------------------------------+------------------+
    | connect_timeout                 | 10               |
    | default_password_lifetime       | 0                |
@@ -55,9 +55,10 @@ Take the following steps to view and modify the values of session-related variab
 
 3. Set the value of the `wait_timeout` variable to `28800`. 
 
-   > **Note**
-   >
-   > `wait_timeout` specifies the time in seconds that the server waits for an interactive connection to become active before closing it. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p><code>wait_timeout</code> specifies the time in seconds that the server waits for an interactive connection to become active before closing it. </p>
+   </main>
 
    ```sql
    obclient [test]> SET wait_timeout = 28800;
@@ -66,9 +67,10 @@ Take the following steps to view and modify the values of session-related variab
 
 4. Set the value of the `interactive_timeout` variable to `28800`. 
 
-   > **Note**
-   >
-   > `interactive_timeout` specifies the time in seconds that the server waits for an non-interactive connection to become active before closing it. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p><code>interactive_timeout</code> specifies the time in seconds that the server waits for an non-interactive connection to become active before closing it.</p>
+   </main>
 
    ```sql
    obclient [test]> SET interactive_timeout = 28800;
