--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/4.user-locked-with-error-code-3118-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/4.user-locked-with-error-code-3118-of-mysql-mode.md
@@ -20,7 +20,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 3118
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Possible causes
 
@@ -32,9 +32,10 @@ Take the following steps to unlock the user and log on again.
 
 1. Log on to the tenant as the administrator. The default username of the administrator of a MySQL tenant is `root`. 
 
-   > **Note**
-   >
-   > If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global `CREATE USER` privilege to unlock users. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If you log on as the administrator, you can directly unlock users. If you log on as a regular user, you must have the global <code>CREATE USER</code> privilege to unlock users.</p>
+   </main>
 
 2. Unlock the `ny1` user. 
 
