--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/8.unique-key-conflict-with-error-code-1062-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/8.unique-key-conflict-with-error-code-1062-of-mysql-mode.md
@@ -29,7 +29,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 1062
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Possible causes
 
@@ -75,11 +75,10 @@ Method 1: If you use **INSERT IGNORE INTO** to avoid constraint conflicts, the `
 
 **Method 2**: If you use `INSERT INTO ON DUPLICATE KEY UPDATE` to avoid constraint conflicts, you can specify the action to take on duplicate primary keys or unique keys. In the following example, the conflicting content is updated. 
 
-> **Note**
->
-> * `ON DUPLICATE KEY UPDATE column_name = expr` is specified: If the data to be inserted is duplicate with values of the primary key or unique key column, you can use the `column_name = expr` statement to update the data in conflicting rows of the table. The `column_name = expr` statement can assign values to one or more columns of the conflicting rows. Separate the columns with commas (,). 
->
-> * `ON DUPLICATE KEY UPDATE column_name = expr` is not specified: If the data to be inserted is duplicate with values of the primary key or unique key, the system returns an error. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p><ul><li><code>ON DUPLICATE KEY UPDATE column_name = expr</code> is specified: If the data to be inserted is duplicate with values of the primary key or unique key column, you can use the <code>column_name = expr</code> statement to update the data in conflicting rows of the table. The <code>column_name = expr</code> statement can assign values to one or more columns of the conflicting rows. Separate the columns with commas (,).</li><li><code>ON DUPLICATE KEY UPDATE column_name = expr</code> is not specified: If the data to be inserted is duplicate with values of the primary key or unique key, the system returns an error.</li></ul>  </p>
+   </main>
 
 1. Execute the `INSERT INTO ON DUPLICATE KEY UPDATE` statement to avoid constraint conflicts when you insert data into the `t_insert` table. 
 
