--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md
@@ -44,53 +44,56 @@ You can connect to an Oracle tenant of OceanBase Database by using any of the fo
 
    OceanBase Database supports OceanBase Connector/J and are fully compatible with MySQL Connector Java, which is the native JDBC driver for MySQL. OceanBase Connector/J is fully compatible with MySQL JDBC. OceanBase Connector/J automatically determines whether OceanBase Database runs in MySQL or Oracle mode and supports both modes at the protocol layer. 
 
-   > **Notice**
-   >
-   > OceanBase Database determines whether the running mode is MySQL or Oracle based on the tenant name that is used when the JDBC driver is connected to the database service. Tenants in Oracle mode can use only Oracle-compatible SQL syntax. 
+   <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>OceanBase Database determines whether the running mode is MySQL or Oracle based on the tenant name that is used when the JDBC driver is connected to the database service. Tenants in Oracle mode can use only Oracle-compatible SQL syntax.</p>
+  </main>
 
    OceanBase Connector/J is compatible with standard JDBC APIs and Oracle Driver. OBServers in Oracle mode are compatible with most Oracle syntax. 
 
-   OceanBase Connector/J can be installed with one click. The installation package is named `oceanbase-client-[Version No.].jar`. You have obtained the installation package of the OceanBase Connector/J driver from OceanBase Technical Support. For more information about the installation procedure, see [OceanBase Connector/J](https://www.oceanbase.com/docs/enterprise/oceanbase-connector-j-cn). 
+   OceanBase Connector/J can be installed with one click. The installation package is `oceanbase-client-[Version No.].jar`. 
+   
+   To obtain the installation package of the OceanBase Connector/J driver, go to [OceanBase Download Center](https://en.oceanbase.com/softwarecenter-cloud). 
 
-   For more information about how to connect Java applications to OceanBase Database, see [Connect Java applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md). 
+   For more information about how to connect Java applications to OceanBase Database, see [Build a Java application](../../../2.quickstart/3.create-sample-application-of-oracle-mode/2.java-application-of-oracle-model.md). 
 
 * C driver (OBCI)
 
    OceanBase Call Interface (OBCI) is a C language tool for interface calls in OceanBase Database. It provides features that are fully compatible with Oracle Call Interface (OCI). 
 
-   OceanBase Call Interface (OBCI) allows you to use the C language to manipulate data in OceanBase Database. OBCI provides standard database access features in the form of a dynamic-link library (OBCI library). Applications can use the features by connecting to this library. 
+   OBCI allows you to use the C language to manipulate data in OceanBase Database. OBCI provides standard database access features in the form of a dynamic-link library (OBCI library). Applications can use the features by connecting to this library. 
 
    OBCI is a C language call interface provided by OceanBase. It provides features that are compatible with OCI. If you want to use a C application written by using Oracle OCI, you need only to specify the OBCI library as the runtime library during linking. By default, library files are installed in the `/u01/obclient/lib` path. 
 
-   For more information about how to connect C applications to OceanBase Database, see [Connect C applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md). 
+   For more information about how to connect C applications to OceanBase Database, see [Build a C application](../../../2.quickstart/3.create-sample-application-of-oracle-mode/3.c-application-of-oracle-model.md). 
 
 * Python driver
 
    OceanBase Connector/J uses the standard JDBC APIs for Python applications to connect to OceanBase Database without using the Python module. 
 
-   For more information about how to connect Python applications to OceanBase Database, see [Connect Python applications to OceanBase Database](../../../2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md). 
+   For more information about how to connect Python applications to OceanBase Database, see [Build a Python application](../../../2.quickstart/3.create-sample-application-of-oracle-mode/1.python-application-of-oracle-model.md). 
 
 ## Connect to OceanBase Database by using an ORM framework
 
-Object Relational Mapping (ORM) is a programming technique that converts data between different types of systems in object-oriented programming languages. In effect, ORM actually creates a "virtual object database" that can be used in programming languages. 
+ORM is a programming technique that converts data between different types of systems in object-oriented programming languages. In effect, ORM actually creates a "virtual object database" that can be used in programming languages. 
 
 You can connect to an Oracle tenant of OceanBase Database by using any of the following ORM frameworks:
 
-* SpringBoot
+* Spring Boot
 
    For more information about how to connect to OceanBase Database by using SpringBoot, see [Connect to OceanBase Database by using SpringBoot](7.connect-to-the-oceanbase-database-through-spring-boot-of-oracle-mode.md). 
 
-* SpringBatch
+* Spring Batch
 
-   For more information about how to connect to OceanBase Database by using SpringBatch, see [Connect to OceanBase Database by using SpringBatch](8.connect-to-the-oceanbase-database-through-spring-batch-of-oracle-mode.md). 
+   For more information about how to connect to OceanBase Database by using SpringBatch, see [Connect to OceanBase Database by using Spring Batch](8.connect-to-the-oceanbase-database-through-spring-batch-of-oracle-mode.md). 
 
-* SpringJDBC
+* Spring JDBC
 
-   For more information about how to connect to OceanBase Database by using SpringJDBC, see [Connect to OceanBase Database by using SpringJDBC](9.connect-to-the-oceanbase-database-through-spring-jdbc-of-oracle-mode.md). 
+   For more information about how to connect to OceanBase Database by using SpringJDBC, see [Connect to OceanBase Database by using Spring JDBC](9.connect-to-the-oceanbase-database-through-spring-jdbc-of-oracle-mode.md). 
 
-* SpringJPA
+* Spring JPA
 
-   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using SpringJPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md). 
+   For more information about how to connect to OceanBase Database by using SpringJPA, see [Connect to OceanBase Database by using Spring JPA](10.connect-to-the-oceanbase-database-through-springjpa-of-oracle-mode.md). 
 
 * Hibernate
 
