--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/10.use-sql-hints-in-query-of-mysql-mode.md
@@ -18,9 +18,10 @@ General SQL hints include:
 
 * `READ_CONSISTENCY` hint: specifies the consistency level for reading tables. If `WEAK` is specified, the related SQL statement reads tables in weak mode. If `STRONG` is specified, the related SQL statement reads tables in strong mode. 
 
-   > **Note**
-   >
-   > `READ_CONSISTENCY` hint: specifies the consistency level for the current query. For complete read/write splitting, routing and other parameters must be specified. The read/write splitting feature of OceanBase Database depends on the logical data center (LDC) feature of OBProxy. If you want to use the read/write splitting feature, we recommend that you configure the LDC first. For more information about read/write splitting, see [Read/write splitting](../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md). 
+    <main id="notice" type='explain'>
+     <h4>Note</h4>
+     <p><code>READ_CONSISTENCY</code> hint: specifies the consistency level for the current query. For complete read/write splitting, routing and other parameters must be specified. The read/write splitting feature of OceanBase Database depends on the logical data center (LDC) feature of OBProxy. If you want to use the read/write splitting feature, we recommend that you configure the LDC first. For more information about read/write splitting, see <a href="../../../7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md">Read/write splitting</a>.</p>
+    </main>
 
 * `INDEX` hint: instructs the optimizer to use an index scan for the specified table. 
 
@@ -28,7 +29,7 @@ General SQL hints include:
 
 For more information about other general SQL hints, see [Comments](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/7.annotation-of-mysql-mode.md). 
 
-## Example of using SQL hints
+## Examples of using SQL hints
 
 SQL hints are frequently used with SQL statements and are not limited to use with SQL queries. The following code shows the syntax for an SQL query that uses hints:
 
@@ -36,10 +37,10 @@ SQL hints are frequently used with SQL statements and are not limited to use wit
 SELECT /*+ hint_text [, hint_text] */ select_items FROM table_name;
 ```
 
-> **Note**
->
-> * You can use multiple SQL hints in a statement. Make sure that the features do not conflict with each other. 
-> * By default, in the CLI environment of OBClient, the comment syntax is ignored, and SQL hints do not work. In this case, you must add the `-c` parameter when you start OBClient.
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p><ul><li>You can use multiple SQL hints in a statement. Make sure that the features do not conflict with each other.</li><li>By default, in the CLI environment of <code>obclient</code>, the comment syntax is ignored, and SQL hints do not work. In this case, you must add the <code>-c</code> parameter when you start OBClient.</li></ul> </p>
+</main>
 
 ### Specify the consistency level for an SQL statement to read tables to WEAK
 
@@ -79,16 +80,4 @@ obclient> SELECT /*+ query_timeout(10000000) */ o_id,o_c_id,o_carrier_id,o_ol_cn
 | 2100 |      8 |            8 |       11 |           1 | 2020-02-15 |
 +------+--------+--------------+----------+-------------+------------+
 1 row in set
-```
-
-### Avoid parallel queries in an SQL statement
-
-```sql
-obclient> SELECT /*+ no_use_px parallel(8) */ * FROM(
-    SELECT /*+ no_use_px parallel(8) */ no_w_id, no_d_id, MAX(no_o_id) max_no_o_id, MIN(no_o_id) min_no_o_id, COUNT(*) count_no
-    FROM nord
-    GROUP BY no_w_id, no_d_Id
-    ) x
-   WHERE max_no_o_id - min_no_o_id+ 1!= count_no;
-Empty set
 ```
