--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md
@@ -24,21 +24,22 @@ Basic transaction control statements:
 
 * [ROLLBACK](5.roll-back-transactions-of-mysql-mode.md): rolls back all the changes in a transaction or the changes after a specific savepoint, deletes all the savepoints in the statements that are rolled back, and releases the locks that the transaction holds. 
 
-In the CLI environment of OceanBase Client (OBClient), you can execute a transaction control statement after the SQL prompt, or modify the `autocommit` variable at the session level to control whether to automatically commit transactions.
+In the CLI environment of `obclient`, you can execute a transaction control statement after the SQL prompt, or modify the `autocommit` variable at the session level to control whether to automatically commit transactions.
 
 * If you execute the `SET autocommit` statement to set the autocommit parameter, the parameter takes effect immediately for the current session and becomes invalid after the session is closed. 
 
 * If you execute the `SET GLOBAL autocommit` statement to set the autocommit parameter at the tenant level, the parameter takes effect only after you close and reconnect the session. 
 
-> **Note**
->
-> If the `autocommit` variable of a session is set to `0` and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction. 
+  <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If the <code>autocommit</code> variable of a session is set to <code>0</code> and no transaction is to be explicitly committed, when the program terminates abnormally, OceanBase Database automatically rolls back the last uncommitted transaction. </p>
+  </main>
 
 ## Related topics
 
 * [Start a transaction](2.start-a-transaction-of-mysql-mode.md)
 
-* [Transaction savepoints](../../../3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
+* [Mark a savepoint](../../../3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
 
 * [Commit a transaction](4.submit-transaction-of-mysql-mode.md)
 
