--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/2.start-a-transaction-of-mysql-mode.md
@@ -107,7 +107,7 @@ For more information about fields in the `oceanbase.$OB_TRANSACTION_PARTICIPANTS
 
 ## Related topics
 
-* [Transaction savepoints](3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
+* [Mark a savepoint](3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md)
 
 * [Commit a transaction](4.submit-transaction-of-mysql-mode.md)
 
