--- a/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/4.submit-transaction-of-mysql-mode.md
@@ -6,9 +6,10 @@ Committing a transaction will persist all changes made in the transaction, delet
 
 In OceanBase Database, you can commit transactions explicitly or implicitly. To explicitly commit a transaction, use the `COMMIT` statement or the commit button on a GUI-based client. To implicitly commit a transaction, you do not need to proactively commit it. When `autocommit` is set to `1`, after each statement is executed, OceanBase Database will automatically commit the transaction where this statement is executed. A statement is a transaction. 
 
-> **Note**
->
-> OceanBase Database issues an implicit `COMMIT` statement before and after a DDL statement, which also commits a transaction. 
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>OceanBase Database issues an implicit <code>COMMIT</code> statement before and after a DDL statement, which also commits a transaction.</p>
+</main>
 
 * If you use the `BEGIN` statement to start a new transaction, you must use the `COMMIT` statement to commit the transaction after you execute a DML statement. 
 
@@ -16,11 +17,12 @@ In OceanBase Database, you can commit transactions explicitly or implicitly. To 
 
    * After you commit the transaction, your changes take effect for all database sessions. After your changes are persisted, you cannot roll them back with a `ROLLBACK` statement. 
 
-      > **Note**
-      >
-      > If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. <!-- For more information about transaction isolation levels, see [Transaction isolation levels](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/3.transaction-isolation-level-of-mysql-mode.md).  -->
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p> If the repeatable read isolation level is set for the transaction, sessions where the transaction is started cannot query newly committed data. <!-- For more information about transaction isolation levels, see <a href="../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/3.transaction-isolation-level-of-mysql-mode.md">Transaction isolation levels</a>. --></p>
+  </main>
 
-* If transactions are committed implicitly, namely, when `autocommit` set to `1`, each SQL statement is a transaction. In this case, you do not need to proactively commit the entire transaction.<g id="1" type="CODE" text="`"></g type="CODE" text="`"> After an SQL statement is executed, the modifications that it makes become permanent. You cannot use the `ROLLBACK` statement to roll back these modifications. 
+* If transactions are committed implicitly, namely, when `autocommit` is set to `1`, each SQL statement is a transaction. In this case, you do not need to proactively commit the entire transaction. After an SQL statement is executed, the modifications that it makes become permanent. You cannot use the `ROLLBACK` statement to roll back these modifications. 
 
 ### Commit a transaction explicitly
 
