--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -20,7 +20,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 1045
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
+For more information about the error codes, see [ Error code overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Troubleshooting procedure
 
@@ -28,9 +28,10 @@ Take the following steps to change the password for a user and log on again.
 
 1. Log on to the tenant as the administrator.  
 
-   > **Note**
-   >
-   > If you log on as the administrator, you can directly change the passwords for users. If you log on as a regular user, you must have the global `CREATE USER` privilege to change the password of another user. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If you log on as the administrator, you can directly change the passwords for users. If you log on as a regular user, you must have the global <code>CREATE USER</code> privilege to change the password of another user.</p>
+   </main>
 
 2. Change the password of the `ny1` user. 
 
@@ -39,9 +40,10 @@ Take the following steps to change the password for a user and log on again.
    Query OK, 0 rows affected
    ```
 
-   > **Note**
-   >
-   > When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see [Set password complexity rules](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md). 
+   <main id="notice" type='explain'>
+     <h4>Note</h4>
+     <p>When you set the password for a user, the password must meet the password complexity requirements of the current tenant. For more information about password complexity, see <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md">Set password complexity rules</a>.</p>
+   </main>
 
 3. Use the `ny1` account to log on to the database again. 
 
