--- a/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/6.table-already-exists-with-error-code-1050-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/6.table-already-exists-with-error-code-1050-of-mysql-mode.md
@@ -28,7 +28,7 @@ The error codes corresponding to this error message are as follows:
 
 * MySQL error code: 1050
 
-For more information about the error codes, see [Overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
+For more information about the error codes, see [Error code overview](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md). 
 
 ## Possible causes
 
@@ -59,6 +59,7 @@ Take the following steps to check whether a table already exists, rename the exi
    Query OK, 0 rows affected
    ```
 
-   > **Note**
-   >
-   > If the table is no longer needed, you can also use the `DROP TABLE` statement to drop the table so that you can then create a new one. 
+   <main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If the table is no longer needed, you can also use the <code>DROP TABLE</code> statement to drop the table so that you can then create a new one.</p>
+   </main>
