--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
@@ -4,11 +4,11 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
 ## Prerequisites
 
-* The OBClient application is downloaded and installed. You can click the link below to download the OBClient application:
+* The OBClient application is downloaded and installed. To obtain the OBClient application, contact OceanBase Technical Support or click the link below:
 
    [Download OBClient](https://en.oceanbase.com/softwarecenter)
 
-* Before you connect to a tenant from a client, make sure that the client is in the whitelist of the tenant. For more information about how to query and configure a tenant whitelist, see [Set and view the tenant allowlist](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.configure-and-view-the-tenant-whitelist.md). 
+* Before you connect to a tenant from a client, make sure that the client is in the allowlist of the tenant. For more information about how to query and configure a tenant allowlist, see [Set and view the tenant allowlist](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.configure-and-view-the-tenant-whitelist.md). 
 
 ## Procedure
 
@@ -18,16 +18,16 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
    You can connect to OceanBase Database directly or by using an OBProxy. 
 
-   * To connect to the MySQL tenant by using an OBProxy, run the following command:
+   * To connect to the Oracle tenant by using an OBProxy, run the following command:
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       or
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:username -P2883 -p****** -c -A oceanbase
       ```
 
       Parameters
@@ -47,24 +47,24 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
       Example:
 
       ```sql
-      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u*****@obtenant#obdemo -P2883 -p****** -c -A oceanbase
       ```
 
       or
 
       ```sql
-      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -uobdemo:obtenant:***** -P2883 -p****** -c -A oceanbase
       ```
 
    * To directly connect to the MySQL tenant, run the following command:
 
       ```sql
-      obclient -h10.10.10.1 -uusername@obtenant -P2881 -ppassword -c -A oceanbase
+      obclient -h10.10.10.1 -uusername@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
       Parameters
 
-      * `-h`: the IP address for connecting to OceanBase Database, which is usually the IP address of an OBServer. 
+      * `-h`: the IP address for connecting to OceanBase Database, which is usually the IP address of an OBServer node. 
 
       * `-u`: the tenant account in the `Username@Tenant name` format. The default administrator username of an Oracle tenant is `sys`. 
 
@@ -78,12 +78,12 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
       * `oceanbase`: the name of the database to be accessed. You can change it to a business database. 
 
-      * When you use the direct connection method, make sure that the tenant resources are distributed on the OBServer you specified. Otherwise, you cannot connect to the tenant by using this OBServer. 
+      * When you use the direct connection method, make sure that the tenant resources are distributed on the OBServer node you specified. Otherwise, you cannot connect to the tenant by using this OBServer node. 
 
       Example:
 
       ```sql
-      obclient -h10.10.10.1 -u******@obtenant -P2881 -p**1*** -c -A oceanbase
+      obclient -h10.10.10.1 -u******@obtenant -P2881 -p****** -c -A oceanbase
       ```
 
 3. After the connection is established, the following command-line prompt is displayed by default: 
@@ -99,7 +99,7 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 Connect to an Oracle tenant of OceanBase Database by using OBClient: 
 
 ```sql
-$obclient -h10.10.10.1 -u******@t_oracle0_91#obdoc -P2883 -p**1*** -c -A sys
+$obclient -h10.10.10.1 -u******@t_oracle0_91#obdoc -P2883 -p****** -c -A sys
 Welcome to the OceanBase.  Commands end with ; or \g.
 Your OceanBase connection id is 3221686103
 Server version: OceanBase 4.0.0.0 (r100000302022111120-7cef93737c5cd03331b5f29130c6e80ac950d33b) (Built Nov 11 2022 20:38:33)
