400use：Replace OB driver with MySQL driver

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
@@ -37,9 +37,9 @@ JDK1.8 和 OceanBase 3.x（MySQL 模式/Oracle 模式）
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.oceanbase</groupId>
-            <artifactId>oceanbase-client</artifactId>
-            <version>2.4.0</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -70,8 +70,8 @@ spring:
     database: oracle
     show-sql: true
   datasource:
-      driver-class-name: com.alipay.oceanbase.jdbc.Driver
-      url: jdbc:oceanbase://host:port/test?characterEncoding=UTF-8
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://host:port/test?characterEncoding=UTF-8
       username: ******
       password: ******
 #spring.jpa.hibernate.ddl-auto=update
