--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -6,9 +6,9 @@
 
 ```java
 <dependency>
-    <groupId>com.oceanbase</groupId>
-    <artifactId>oceanbase-client</artifactId>
-    <version>2.4.0</version>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
 </dependency>
 <dependency>
     <groupId>org.springframework.data</groupId>
@@ -129,8 +129,8 @@
 
 ```xml
 #OceanBase 数据库
-jdbc.driver=com.alipay.oceanbase.jdbc.Driver
-jdbc.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 jdbc.username=admin
 jdbc.password=******
 database.dialect=MYSQL
@@ -152,7 +152,7 @@ useUnicode=true&characterEncoding=utf-8
   <dependency>
    <groupId>com.alipay.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
   </dependency>
   <!-- 其余部分略 -->
 ```
@@ -162,10 +162,10 @@ useUnicode=true&characterEncoding=utf-8
 内容如下(仅数据源和 jpa 部分配置) ：
 
 ```java
-spring.datasource.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+spring.datasource.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 spring.datasource.username=admin@oracle
 spring.datasource.password=******
-spring.datasource.driver-class-name=com.alipay.oceanbase.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
