410：Replace OB driver with MySQL driver

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -36,9 +36,9 @@
 
       * -P：提供 OceanBase 数据库连接端口，也是 ODP 的监听端口，默认是 2883，在部署 ODP 时可自定义。
 
-      * -c：表示在 MySQL 运行环境中不要忽略注释。
+      * -c：表示在 OBClient 运行环境中不要忽略注释。
 
-      * -A：表示在 MySQL 连接数据库时不自动获取统计信息。
+      * -A：表示在 OBClient 连接数据库时不自动获取统计信息。
 
       * oceanbase：访问的数据库的名称，可以更改为业务数据库。
 
@@ -70,9 +70,9 @@
 
       * -p：提供账户密码，为了安全可以不提供，改为在后面提示符下输入，密码文本不可见。
 
-      * -c：表示在 MySQL 运行环境中不要忽略注释。
+      * -c：表示在 OBClient 运行环境中不要忽略注释。
 
-      * -A：表示在 MySQL 连接数据库时不自动获取统计信息。
+      * -A：表示在 OBClient 连接数据库时不自动获取统计信息。
 
       * oceanbase：访问的数据库的名称，可以更改为业务数据库。
 
