--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -6,9 +6,9 @@
 
 ```java
 <dependency>
-   <groupId>com.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>2.4.0</version>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>8.0.25</version>
 </dependency>
 <dependency>
    <groupId>org.springframework.data</groupId>
@@ -129,8 +129,8 @@
 
 ```xml
 #OceanBase 数据库
-jdbc.driver=com.alipay.oceanbase.jdbc.Driver
-jdbc.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 jdbc.username=admin
 jdbc.password=******
 database.dialect=MYSQL
@@ -150,9 +150,9 @@ useUnicode=true&characterEncoding=utf-8
       <version>****</version>
   </dependency>
   <dependency>
-   <groupId>com.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>2.4.0</version>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>8.0.25</version>
   </dependency>
   <!-- 其余部分略 -->
 ```
@@ -162,7 +162,7 @@ useUnicode=true&characterEncoding=utf-8
 内容如下(仅数据源和 jpa 部分配置) ：
 
 ```java
-spring.datasource.url=jdbc:oceanbase://10.100.xxx.xxx:18815/test
+spring.datasource.url=jdbc:mysql://10.100.xxx.xxx:18815/test
 spring.datasource.username=admin@oracle
 spring.datasource.password=******
 spring.datasource.driver-class-name=com.alipay.oceanbase.jdbc.Driver
