--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -20,7 +20,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
 
    The `my.cnf` file is stored in the `/etc/` directory. Enable binlog write and set binlog-format to ROW. Then, restart the MySQL database for the configuration to take effect. 
 
-   Example:
+   For example:
 
    ```bash
    log-bin=mysql-bin # Enable the binlog.
@@ -32,7 +32,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
 
    Create a user for connecting to the MySQL database. Set the username to `canal` and password to `123456`. Grant the read and write privileges on all databases to the `canal` user. 
 
-   Example:
+   For example:
 
    ```sql
    MySQL [(none)]> CREATE USER 'canal'@'%' IDENTIFIED BY '123456';
@@ -70,7 +70,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
    Records: 5  Duplicates: 0  Warnings: 0
    ```
 
-### Step 2: Download and install Canal.
+### Step 2: Download and install Canal
 
 1. Download the software package. 
 
@@ -90,7 +90,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
 
    The default configuration files of canal.deployer are `conf/canal.properties` and `conf/example/instance.properties`. By default, an instance named `example` is created. You must modify the database connection address, username, and password of the `example` instance. The following sample code shows you how to modify the configuration file: The `canal.instance.connectionCharset` parameter specifies the Java encoding type corresponding to the database encoding method. Valid values: `UTF-8`, `GBK`, and `ISO-8859-1`. 
 
-   Example:
+   For example:
 
    ```bash
    vi conf/example/instance.properties
@@ -121,13 +121,13 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
    cd /Canal_Home/canal && sh bin/startup.sh
    ```
 
-5. View server logs 
+5. View server logs.
 
    ```bash
    cat logs/canal/canal.log
    ```
 
-6. View instance logs 
+6. View instance logs. 
 
    ```bash
    tail -f logs/canal/canal.log
@@ -162,7 +162,7 @@ canal.adapter supports multiple containers. For OceanBase Database, the canal.ad
 
    Modify the `application.yml` file of the launcher in the conf/ directory. Set `mode` of the adapter source to `tcp`. Specify the `canal.tcp` properties, including the IP address and port of the `Canal server` and the username and password for database connection. Then, specify the connection information of the adapter destination. `instance` indicates the name of the source instance, which is specified during the deployment of Canal. key is a custom parameter and will be used later. jdbc indicates how the destination OceanBase database is connected to the source MySQL database. You can use the MySQL driver. 
 
-   Example:
+   For example:
 
    ```bash
    mode: tcp #tcp kafka rocketMQ rabbitMQ
@@ -263,7 +263,7 @@ canal.adapter supports multiple containers. For OceanBase Database, the canal.ad
 
    Write data in the source MySQL database and check data synchronization in the destination OceanBase database. 
 
-## Limits
+## Limitations
 
 * The source table must have a primary key. Otherwise, if a record is deleted from the source table, the synchronized table in the destination is fully deleted. 
 
