--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -1,6 +1,6 @@
 # Use Flink CDC to synchronize data from a MySQL database to OceanBase Database
 
-Flink CDC Connectors (Flink CDC for short) is a set of source connectors for Apache Flink. Flink CDC can read historical data and incremental changes from most databases in real time. Flink CDC can synchronize full and incremental data of different databases to message queues and data warehouses. You can also use Flink CDC for real-time data integration, to import database data to a data lake or data warehouse in real time. Flink CDC also supports data processing. You can use the SQL client of Flink CDC to associate, widen, and aggregate database data in real time, and write the results to various stores. Change data capture (CDC) helps you monitor and capture changes in databases. You can do many things with data provided by CDC. For example, you can use the data to make historical databases or perform near real-time caching. You can also provide the CDC data to message queues (MQs), so you can use MQs for analysis and auditing. 
+Flink CDC Connectors (Flink CDC for short) is a set of source connectors for Apache Flink. Flink CDC can read historical data and incremental changes from most databases in real time. Flink CDC can synchronize full and incremental data of different databases to message queues and data warehouses. You can also use Flink CDC for real-time data integration, to import database data to a data lake or data warehouse in real time. Flink CDC also supports data processing. You can use the SQL client of Flink CDC to associate, widen, and aggregate database data in real time, and write the results to various stores. Change Data Capture (CDC) helps you monitor and capture changes in databases. You can do many things with data provided by CDC. For example, you can use the data to make historical databases or perform near real-time caching. You can also provide the CDC data to message queues (MQs), so you can use MQs for analysis and auditing. 
 
 This topic describes how to use Flink CDC to synchronize data from a MySQL database to OceanBase Database. 
 
@@ -63,6 +63,8 @@ Prepare test data in the MySQL database and use the test data as the source data
 Create a table in OceanBase Database to store the source data. 
 
 1. Log on to OceanBase Database. 
+   
+   Log on to the `mysql001` tenant using the user `user001`.
 
    ```bash
    [xxx@xxx /...]
@@ -114,7 +116,7 @@ Create a table in OceanBase Database to store the source data.
     <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>After you execute the <code>./bin/start-cluster.sh</code> file, if <code>bash: ./bin/start-cluster.sh: Permission denied</code> is returned, you need to set the privileges on all files with the <code>-rw-rw-r--</code> privileges in the <code>flink-1.15.3</code> directory to <code>-rwxrwxrwx</code>. </p>
-    <p>Example:</p>
+    <p>For example:</p>
     <pre><code class="language-bash">
     [xxx@xxx /FLINK_HOME/flink-1.15.3]
     # chmod -R 777 /FLINK_HOME/flink-1.15.3/*
