--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/7.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/7.use-chunjun-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -10,7 +10,7 @@ Migrate data from the `tbl1` table in the MySQL database to the `test_tbl1` tabl
 
 | Information of the MySQL database (source database) | Example value |
 |---------------|----------------|
-| Host URL | 10.10.10.1 |
+| Host URL | xxx.xxx.xxx.xxx |
 | Port number | 3306 |
 | Username | root |
 | Password of the user | ****** |
@@ -60,7 +60,7 @@ You have installed JDK 1.8 and configured the `JAVA_HOME` environment variable.
 
 Configure the JSON file based on the environment information to enable migration of data from the `tbl1` table in the MySQL database to the `test_tbl1` table in OceanBase Database.
 
-Example:
+For example:
 
 ```bash
 [root@xxx /]
@@ -97,7 +97,7 @@ $vi test_mysql_to_ob.json
             "connection": [
               {
                 "jdbcUrl": [
-                  "jdbc:mysql://10.10.10.1:3306/test_mysql_to_ob"
+                  "jdbc:mysql://xxx.xxx.xxx.xxx:3306/test_mysql_to_ob"
                 ],
                 "table": [
                   "tbl1"
