--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md
@@ -257,13 +257,12 @@ MySQL 模式下 `ANALYZE` 语句统计信息收集示例如下：
 
 ```sql
 CREATE TABLE test.t1(c1 INT, c2 INT, c3 INT, c4 INT, c5 INT, c6 INT, c7 INT, c8 INT, c9 INT, c10 INT);
-
-obclient> INSERT /*+APPEND*/ INTO t1 SELECT level,level,level,level,level,level,level,level,level,level FROM DUAL CONNECT BY level<=1000000;
-ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for the right syntax to use near 'CONNECT BY level<=1000000' at line 1
+CREATE TABLE t2 (c1 INT PRIMARY KEY);
+INSERT INTO t2 VALUES(0),(1),(2),(3),(4),(5),(6),(7),(8),(9);
+INSERT /*+APPEND*/ INTO t1 SELECT * FROM (SELECT s0.c1 c1, s1.c1 c2, s2.c1 c3, s3.c1 c4, s4.c1 c5, s5.c1 c6, s0.c1 * 10 c7, s1.c1 * 10 c8, s2.c1 * 10 c9, s3.c1 * 10 c10 FROM t2 s0, t2 s1, t2 s2, t2 s3, t2 s4, t2 s5);
 
 # 不收集直方图的场景
 CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1', method_opt=>'for all columns size 1');
-
 
 # 收集直方图的场景并使用默认策略
 CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1');
@@ -287,8 +286,9 @@ CALL DBMS_STATS.GATHER_TABLE_STATS('test', 't1', degree=>8);
 
 ```sql
 CREATE TABLE t_part(c1 INT, c2 INT, c3 INT, c4 INT, c5 INT, c6 INT, c7 INT, c8 INT, c9 INT, c10 INT) PARTITION BY HASH(c1) PARTITIONS 128;
-
-obclient> INSERT /*+APPEND*/ INTO t_part SELECT level,level,level,level,level,level,level,level,level,level FROM DUAL CONNECT BY level<=1000000;
+CREATE TABLE t2 (c1 INT PRIMARY KEY);
+INSERT INTO t2 VALUES(0),(1),(2),(3),(4),(5),(6),(7),(8),(9);
+INSERT /*+APPEND*/ INTO t1 SELECT * FROM (SELECT s0.c1 c1, s1.c1 c2, s2.c1 c3, s3.c1 c4, s4.c1 c5, s5.c1 c6, s0.c1 * 10 c7, s1.c1 * 10 c8, s2.c1 * 10 c9, s3.c1 * 10 c10 FROM t2 s0, t2 s1, t2 s2, t2 s3, t2 s4, t2 s5);
 ```
 
 针对分区表，除了上述增加并行度以外，也可以考虑分区推导方式的收集，即收集分区的统计信息，进而通过分区统计信息推导全局统计信息，以加快收集的效率。例如同样的场景，不增加并行度，而是调整收集的分区方式，示例如下。
