400use：Data migration content modification

--- a/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
+++ b/zh-CN/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
@@ -4,7 +4,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>OceanBase 3.x 的版本中，字段的长度*字段的个数需小于 1.5M。</p>
+    <p>OceanBase 3.x 的版本中，字段的长度*字段的个数需小于 1.5M，并且字段个数不能超过 512 个。</p>
   </main>
 
 ## MySQL 模式
