--- a/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/zh-CN/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/1.use-mydumper-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -1,101 +1,145 @@
-# 使用 MyDumper 从 MySQL 数据库迁移数据到 OceanBase 数据库
+# 使用 mydumper 和 myloader 从 MySQL 数据库迁移数据到 OceanBase 数据库
 
-MyDumper 是 MySQL 提供的用于导出 MySQL 数据库对象和数据的工具，非常方便。OceanBase 数据库兼容 MySQL 协议，您可以使用 MyDumper 对 OceanBase 数据库中的数据进行备份。MyDumper 是 MySQL 自带的逻辑备份工具。它的备份原理是通过协议连接到数据库后，将需要备份的数据查询出来，并将查询出的数据转换成对应的 INSERT 语句。当您需要还原这些数据时，只要执行这些 INSERT 语句，即可将对应的数据还原。
+本文将介绍如何使用 mydumper 和 myloader 从 MySQL 数据库迁移数据至 OceanBase 数据库（MySQL 模式）。
 
-## 建议版本
+## mydumper 和 myloader 简介
 
-|  系统   |                             版本                              |
-|-------|-------------------------------------------------------------|
-| Linux | mysqldump Ver 10.13 Distrib 5.6.37, for Linux (x86_64)      |
-| MacOS | mysqldump Ver 10.13 Distrib 5.7.21, for macos10.13 (x86_64) |
+* **mydumper：** 是一款开源的多线程备份工具，用于备份 MySQL 数据库。mydumper 支持备份整个数据库、单个表或多个表，支持多线程备份，可以加速数据备份过程。mydumper 还支持备份数据的压缩和加密，可以从备份文件中恢复数据。mydumper 是一款命令行工具，需要安装并使用命令行进行操作。
 
-## 注意事项
+* **myloader：** 是一款用于恢复 mydumper 备份文件的工具。myloader 可以快速恢复备份的 MySQL 数据库，并支持从备份文件中恢复数据，不需要先创建数据库。myloader 还支持恢复到指定时间点的备份文件，可以指定要恢复的数据表和数据行。myloader 是一款命令行工具，需要安装并使用命令行进行操作。
 
-* 使用 mysqldump 仅支持导出 OceanBase 数据库 MySQL 模式实例中的数据。
+mydumper 和 myloader 都是开源的工具，具有高效、安全、可靠的特点，并且支持多种备份方式和备份数据的压缩和加密。
 
-* 不支持锁库和表 Dump。
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>使用 MyDumper 仅支持导出 OceanBase 数据库 MySQL 模式租户中的数据。</p>
+</main>
 
-* 当您需要导出的数据量较多时，可能会报 `TIMEOUT 4012` 错误。为避免这个错误您需要使用租户管理员账户登录数据库运行下述语句调整系统参数，导出完成后您可以修改回原值：
+## 操作步骤
 
-```sql
-obclient> SET GLOBAL ob_trx_timeout=1000000000,GLOBAL ob_query_timeout=1000000000;
-```
+1. 环境准备。
+2. 备份操作。
 
-## 备份操作
+   下述示例语句展示了如何使用 mydumper 中备份 OceanBase 数据库中的数据：
 
-下述示例语句展示了如何在 mysqldump 中备份 OceanBase 数据库中的数据，运行该语句后会生成一个 SQL 格式的文件：
+   ```shell
+   mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -o /data/backup/mysql/
+   ```
+
+   mydumper 命令常用参数说明：
+
+   | 参数|参数全称|说明|
+   |-----------|-------------------|----------|
+   |-h|--host|连接的主机名|
+   |-P|--port|连接的端口|
+   |-u|--user|备份使用的用户名|
+   |-p|--password|备份使用的用户密码|
+   |-B|--database|备份的数据库名，默认备份所有库|
+   |-T|--tables-list|备份的表名，多张表名字用逗号隔开|
+   |-i|--ignore-engines|备份忽略的存储引擎，用逗号分割|
+   |-m|--no-schemas|不备份表结构|
+   |-t| --threads|开启的并行备份线程数，默认是 4|
+   |-c|--compress|对输出文件进行压缩|
+   |-o|--outputdir|备份文件输出目录|
+
+3. 恢复操作。
+
+   备份数据后，您可通过 `source` 命令或 `myloader` 命令恢复数据。
+
+   * 使用 source 命令恢复数据。
+
+      若无法直接还原单表，可以找到对应的单表 sql 文件，进入命令行，使用 `source` 命令恢复数据。
+
+      ```shell
+      source <表名>-schema.sql #还原表结构
+
+      source <表名>.sql #还原表数据
+      ```
+
+   * 下述示例语句展示了如何使用 myloader 恢复 OceanBase 数据库中的数据：
+
+      ```shell
+      myloader -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -o -d /data/backup/mysql/
+      ```
+
+      myloader 命令常用参数说明：
+
+      | 参数| 参数全称|说明|
+      |-----------|-------------------|----------|
+      |-h|--host|连接的主机名|
+      |-P|--port|连接的端口|
+      |-u|--user|恢复使用的用户名|
+      |-p|--password|恢复使用的用户密码|
+      |-B|--database|恢复的数据库名|
+      |-d| --directory|恢复文件的目录|
+      |-o| --overwrite-tables|如果要恢复的表存在，则先 drop 掉该表；使用该参数，需要备份时候要备份表结构|
+      |-B| --database|需要还原的数据库|
+
+### 步骤一：环境准备
+
+1. 下载安装包。
+
+   请根据需要在 [下载安装包地址](https://github.com/mydumper/mydumper/tags) 中，下载对应的安装包并安装。
+
+2. 在数据库主机上解压缩安装包。
+
+   以 `mydumper-0.12.7-2-zstd.el7.x86_64.rpm` 为示例。
+
+   ```shell
+   rpm2cpio mydumper-0.12.7-2-zstd.el7.x86_64.rpm | cpio -div
+   ```
+
+3. 验证是否正确安装。
+
+   ```shell
+   ./usr/bin/mydumper --help
+   ```
+
+   在备份目的文件夹中, 会生成 `metadata` 文件和对应的表结构或表数据文件。
+
+### 步骤二：备份操作
+
+#### 备份全库
 
 ```shell
-mysqldump -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** --skip-triggers  --databases db1  db2  db3  --skip-extended-insert  > /tmp/data.sql
+mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -o /data/backup/mysql/
 ```
 
-下述表格为上述备份语句的参数说明：
-
-|           参数           |                                 说明                                  |
-|------------------------|---------------------------------------------------------------------|
-| --host（-h）             | 服务器 IP 地址。                                                          |
-| --port（-P）             | 服务器端口号。                                                             |
-| --user（-u）             | MySQL 用户名。                                                          |
-| --pasword（-p）          | MySQL 密码。                                                           |
-| -d                     | 仅导出表结构不导出数据。                                                        |
-| --databases            | 指定要备份的数据库。                                                          |
-| --all-databases        | 备份所有数据库，不建议使用，建议单独指定。                                               |
-| --compact              | 压缩模式，产生更少的输出。                                                       |
-| --comments             | 添加注释信息。                                                             |
-| --complete-insert      | 输出完成的插入语句。                                                          |
-| --force                | 忽略错误。                                                               |
-| --skip-triggers        | OceanBase 数据库目前不支持 trigger 语法，所以如果不指定 `--force` 参数时必须要加上该参数，否则无法导出。 |
-| --skip-extended-insert | 导出语句为多条 `INSERT` 格式，否则为 `INSERT INTO table VALUES(...),(...),` 格式。  |
-
-导出数据后，您可通过下述语句导入之前导出的数据：
-
-```sql
-source  /tmp/data.sql
-```
-
-## 使用 mysqldump 迁移 MySQL 表到 OceanBase
-
-### 导出指定数据库的表结构（不包括数据）
-
-```sql
-mysqldump -h 127.1 -u**** -P3306 -p******  -d TPCH --compact > tpch_ddl.sql
-```
-
-在导出的脚本中：
-
-* 视图的定义也会在里面，但是会以注释（`/` *`!`* `/`）形式被标注。您无须关注视图部分，可将该部分内容删除。
-  
-* 有一些语法 OceanBase MySQL 不支持，但不影响，替换掉其中部分即可。
-
-示例如下：
+#### 备份指定数据库 test
 
 ```shell
-/*!40101 SET character_set_client = @saved_cs_client */;
-/*!40101 SET @saved_cs_client     = @@character_set_client */;
-/*!40101 SET character_set_client = utf8 */;
-CREATE TABLE `NATION` (
-  `N_NATIONKEY` int(11) NOT NULL,
-  `N_NAME` char(25) COLLATE utf8_unicode_ci NOT NULL,
-  `N_REGIONKEY` int(11) NOT NULL,
-  `N_COMMENT` varchar(152) COLLATE utf8_unicode_ci DEFAULT NULL,
-  PRIMARY KEY (`N_NATIONKEY`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci MAX_ROWS=4294967295;
+mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p******  -B test -o /data/backup/mysql/
 ```
 
-在示例中，导出的脚本里有一个 `MAX_ROWS=` 的设置，这个是 MySQL 特有的，OceanBase MySQL 没有这个问题，也不需要这个设置，且不支持这个语法。您需要把所有 `MAX_ROWS=` 以及后面部分注释掉。注释方式可以使用批量替换技术，例如，在 Vim 中使用 `:%s/MAX_ROWS=/; -- MAX_ROWS=/g`。
+#### 备份指定数据库指定表(t1,t2)
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>上面导出的 SQL 中表名是大写，说明源端 MySQL 设置表名默认很可能是大小写敏感，因此目标 OceanBase MySQL 租户也要进行同样的设置。</p>
-  </main>
+```shell
+mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -B test -T t1,t2 -o /data/backup/mysql/
+```
 
-在导出的表结构语句里，可能包含外键。在导入 OceanBase MySQL 里时，如果外键依赖的表没有创建，导入脚本会报错，因此在导入之前需要禁用外键检查约束。
+#### 仅备份表数据
+
+```shell
+mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -B test -T t1 -m -o /data/backup/mysql/
+```
+
+#### 备份 t1 表的数据，开并行和数据压缩
+
+```shell
+mydumper -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p****** -B test -T t1 -t 6 -c -o /data/backup/mysql/
+```
+
+### 步骤三：恢复操作
+
+#### 禁用外键检查约束
+
+在备份的表结构语句里，可能包含外键。在导入 OceanBase MySQL 里时，如果外键依赖的表没有创建，导入脚本会报错，因此在导入之前需要禁用外键检查约束。
 
 ```sql
-MySQL [oceanbase]> set global foreign_key_checks=off;
+MySQL [oceanbase]> SET GLOBAL foreign_key_checks=off;
 Query OK, 0 rows affected
 
-MySQL [oceanbase]> show global variables like '%foreign%';
+MySQL [oceanbase]> SHOW GLOBAL VARIABLES LIKE '%foreign%';
 +--------------------+-------+
 | Variable_name      | Value |
 +--------------------+-------+
@@ -104,21 +148,30 @@ MySQL [oceanbase]> show global variables like '%foreign%';
 1 row in set
 ```
 
-在 OBClient 里通过 `source` 命令可以执行外部 SQL 脚本文件。
+备份数据后，您可通过 `source` 命令或 `myloader` 命令恢复数据。
 
-### 导出指定数据库的表数据（不包括结构）
+#### 使用 source 命令恢复数据
+
+若无法直接还原单表，可以找到对应的单表 sql 文件，进入命令行，使用 `source` 命令恢复数据。
 
 ```shell
-mysqldump -h 127.1 -u**** -P3306 -p****** -t TPCH  > tpch_data.sql
+source test.t1-schema.sql 还原表结构
+
+source test.t1.00000.sql 还原表数据
 ```
 
-mysqldump 导出的数据初始化 SQL 里会首先将表锁住，禁止其他会话写。然后使用 `insert` 写入数据。每个 `insert` 后面的 `value` 里会有很多值。这是批量 `insert`。
+#### 使用 myloader 命令恢复数据
 
-```sql
-LOCK TABLES `t1` WRITE;
-/*!40000 ALTER TABLE `t1` DISABLE KEYS */;
-INSERT INTO `t1` VALUES ('a'),('中');
-/*!40000 ALTER TABLE `t1` ENABLE KEYS */;
-UNLOCK TABLES;
-/*!40103 SET TIME_ZONE=@OLD_TIME_ZONE */;
-```
+* 导入表结构和数据。
+
+   ```shell
+   myloader -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p******  -B test -o -d /data/backup/mysql/
+   ```
+
+* 导入数据库（若目标库不存在则会新建）。
+
+   ```shell
+   myloader -h xx.xx.xx.xx -P2883 -u 'user@tenantname#clustenamer' -p******  -B test -s test1 -o -d /data/backup/mysql/
+   ```
+
+更多关于 mydumper 和 myloader 的使用方法，请参见 <https://github.com/mydumper/mydumper>。
