400use：About Modifying Query Formats

--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/1.about-query-of-oracle-mode.md
@@ -1,24 +1,22 @@
 # 关于查询
 
-一个查询，指一个 SELECT 语句，从一个或多个表或者视图里查询数据。
+一个查询，指一个 `SELECT` 语句，从一个或多个表或者视图里查询数据。
 
 最简单的SQL语句格式是：
 
-```javascript
+```sql
 SELECT select_list FROM table_list；
 ```
 
-* select_list 指定的可以是后面。
+* `select_list` 指定的可以是 `table_list` 里的列，也可以是函数值、字符常量、计算变量等。
 
-* table_list 里的列，也可以是函数值、字符常量、计算变量等。
+* `table_list` 指定的是包含所查数据的表或者视图。
 
-* table_list 指定的是包含所查数据的表或者视图。
+上面是简单的查询语句格式，实际 `table_list` 还可以是一个子查询语句，同时还可以带上 `where` 条件以限定返回的结果要符合某种条件。
 
-上面是简单的查询语句格式，实际 table_list 还可以是一个子查询语句，同时还可以带上 where 条件以限定返回的结果要符合某种条件。
+需要注意的是，在 Oracle 租户里，`table_list` 也可以用空表 `dual` 代替，这样 `select_list` 就不是具体的列，而是常量或者变量值。如下面这个 SQL：
 
-需要注意的是，在 Oracle 租户里，table_list 也可以用空表 dual 代替，这样 select_list 就不是具体的列，而是常量或者变量值。如下面这个 SQL：
-
-```javascript
+```shell
 $obclient -h10.0.0.0 -utpcc@t_oracle0_91#obdoc -P2883 -p****** tpcc
 obclient> select '中', 6*6 from dual;
 +-------+-----+
